<resources>
    <string name="app_name">SKED</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SMS">SMS</string>
    <string name="Call">CALL</string>
    <string name="Sms">Sms</string>
    <string name="CALL">Call</string>
    <string name="Contacts">Contacts</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
     
    <string name="home">Home</string>
    <string name="trash">Trash</string>
    <string name="logout">Logout</string>
     

    <string name="aboutUs">About Us</string>
    <string name="other">Other</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
     
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
     
    <string name="location">Location</string>
     
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
     
    <string name="signUp">SIGN UP</string>
     
    <string name="already_user">Already have Account? Login.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
</resources>
