<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home"></item>
        <item
            android:id="@+id/sms"
            android:icon="@drawable/sms"
            android:title="@string/Sms"></item>
        <item
            android:id="@+id/call"
            android:icon="@drawable/phone"
            android:title="@string/CALL"></item>
        <item
            android:id="@+id/logut"
            android:icon="@drawable/logout"
            android:title="@string/logout"></item>
    </group>

    <item android:title="@string/other" >
        <menu >
              
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/aboutUs" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
                    
        </menu>
            
    </item>
</menu>
